# sepyrate

./: LICENSE.txt  README.md  pyproject.toml
src/sepyrate/: __init__.py  sepyrate.py
