[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sepyrate"
version = "1.1.0"
authors = [
  { name="Vivi Andasari, PhD", email="vandasari@gmail.com" },
]
description = "Sepyrate is a lightweight Python library for formatting numbers with custom thousands and decimal separators."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["digit grouping", "decimal separator", "thousands separator"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vandasari/sepyrate"
Repository = "https://github.com/vandasari/sepyrate"
Issues = "https://github.com/vandasari/sepyrate/issues"

